--- a/aqua-engine/CMakeLists.txt
+++ b/aqua-engine/CMakeLists.txt
@@ -112,10 +112,10 @@ if (LOCAL_BUILD)
     target_link_libraries(aqua-engine PUBLIC $ENV{FBXSDK_DIR}/lib/x64/debug/libfbxsdk-md.lib)
     target_link_libraries(aqua-engine PUBLIC $ENV{FBXSDK_DIR}/lib/x64/debug/libxml2-md.lib)
     target_link_libraries(aqua-engine PUBLIC $ENV{FBXSDK_DIR}/lib/x64/debug/zlib-md.lib)
-    set_property(TARGET aqua-engine PROPERTY MSVC-RUNTIME-LIBRARY "MultiThreadedDebugDLL")
+    set_property(TARGET aqua-engine PROPERTY MSVC-RUNTIME-LIBRARY "MultiThreadedDebug")
 else ()
     target_link_libraries(aqua-engine PUBLIC $ENV{FBXSDK_DIR}/lib/x64/release/libfbxsdk-md.lib)
     target_link_libraries(aqua-engine PUBLIC $ENV{FBXSDK_DIR}/lib/x64/release/libxml2-md.lib)
     target_link_libraries(aqua-engine PUBLIC $ENV{FBXSDK_DIR}/lib/x64/release/zlib-md.lib)
-    set_property(TARGET aqua-engine PROPERTY MSVC-RUNTIME-LIBRARY "MultiThreadedDLL")
+    set_property(TARGET aqua-engine PROPERTY MSVC-RUNTIME-LIBRARY "MultiThreaded")
 endif ()
