--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,7 @@ endif ()
 
 add_subdirectory(aqua-engine)
 
-set(EFK_RUNTIME_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/vendor/effekseer/src)
-set(EFK_BUILD_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/vendor/effekseer/build_msvc2022_x64/src)
+set(EFK_RUNTIME_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/vendor/effekseer/install_msvc2022_x64)
 
 # Test
 set(TEST_SRC
@@ -112,12 +111,13 @@ function(create_sample name files)
     target_link_libraries(${exe_name} dwrite.lib)
 
     target_include_directories(${exe_name} PUBLIC
-            ${EFK_RUNTIME_ROOT}/Effekseer
-            ${EFK_RUNTIME_ROOT}/EffekseerRendererDX12)
+            ${EFK_RUNTIME_ROOT}/include/Effekseer
+            ${EFK_RUNTIME_ROOT}/include/EffekseerRendererDX12)
     target_link_libraries(${exe_name}
-            ${EFK_BUILD_ROOT}/Effekseer/Debug/Effekseerd.lib
-            ${EFK_BUILD_ROOT}/EffekseerRendererDX12/Debug/EffekseerRendererDX12d.lib)
-    set_property(TARGET ${exe_name} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDebug")
+            ${EFK_RUNTIME_ROOT}/lib/Effekseerd.lib
+            ${EFK_RUNTIME_ROOT}/lib/EffekseerRendererDX12d.lib
+            ${EFK_RUNTIME_ROOT}/lib/LLGId.lib)
+    set_property(TARGET ${exe_name} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDebugDLL")
 
     message(STATUS "Successfully created sample: ${name}")
 endfunction()
@@ -277,17 +277,19 @@ create_sample(blur
         resources/models/ninja.png
 )
 
-create_sample(effect
-        sample/effect/main.cpp
-        sample/effect/Graphics.cpp
-        sample/effect/Graphics.h
-        sample/effect/BaseWindow.h
-        sample/effect/MainWindow.h
-        sample/effect/MainWindow.cpp
-        sample/effect/shader.hlsl
-        resources/models/isu.fbx
-        resources/models/isu.png
-        resources/models/ninja.fbx
-        resources/models/ninja.png
-        vendor/effekseer/Examples/Resources/Laser01.efkefc
-)
+if (LOCAL_BUILD)
+    create_sample(effect
+            sample/effect/main.cpp
+            sample/effect/Graphics.cpp
+            sample/effect/Graphics.h
+            sample/effect/BaseWindow.h
+            sample/effect/MainWindow.h
+            sample/effect/MainWindow.cpp
+            sample/effect/shader.hlsl
+            resources/models/isu.fbx
+            resources/models/isu.png
+            resources/models/ninja.fbx
+            resources/models/ninja.png
+            vendor/effekseer/Examples/Resources/Laser01.efkefc
+    )
+endif ()
