--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,7 @@ function(create_sample name files)
             list(APPEND src_list ${src_file})
         endif ()
         if (src_file MATCHES ".*\\.(hlsl|hlsli)$")
-            file(COPY ${src_file} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+            file(COPY ${src_file} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/shaders)
         endif ()
         if (LOCAL_BUILD)
             if (src_file MATCHES ".*\\.(fbx|png|hdr|efkefc)$")
